--- a/UltimaPPI/estilo.css
+++ b/UltimaPPI/estilo.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 .dropbtn {
   background-color: #4CAF50;
   color: white;
-  padding: 16px;
+  padding: 20px;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -54,3 +54,39 @@ and open the template in the editor.
   background-color: #3e8e41;
 }
 /*https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button*/
+
+/*AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA*/
+
+.dropdown-content li{
+position:relative; 
+float:left; 
+border-right:1px solid #c0c0c0; 
+}
+
+.dropdown-content li a{
+  color:#333; 
+  text-decoration:none; 
+  padding:5px 10px; 
+  display:block;}
+ 
+.dropdown-content li a:hover{
+background:#333; 
+color:#fff;
+}
+
+.dropdown-content li  ul{
+position:absolute; 
+top:25px; 
+left:0;
+background-color:#fff; 
+display:none;
+}
+
+.dropdown-content li:hover ul, .dropdown-content li.over ul{
+  display:block;}
+
+.dropdown-content li ul li{
+border:1px solid #c0c0c0; 
+display:block; 
+width:150px;
+}
